[package]
name = "asynchronous_broadcast_protocols"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519 = "2.2.3"
ed25519-dalek = "2.2.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.46.1", features = ["full"] }
